fix horizontal scroll when table is empty.

--- a/styles/results.less
+++ b/styles/results.less
@@ -93,6 +93,7 @@ atom-pane .quick-query-result .quick-query-result-resize-handler{
 	}
 
 	table.table.quick-query-result-table{
+		min-height: 1px;
 		thead{
 			z-index: 1;
 			background-color: @tool-panel-background-color;
